--- a/task-2/index.html
+++ b/task-2/index.html
@@ -2,31 +2,32 @@
 <html lang="no">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Something</title>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Something</title>
+  <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
 
-    <div id='map' style='width: 100vw; height: 100vh;'>
-        <div class="radio-container">
-            <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-info active" >
-                  <input onclick='toggle(event)' type="radio" name="options" value="bikes" checked> BIKES
-                </label>
-                <label class="btn btn-info" >
-                  <input onclick='toggle(event)' type="radio" name="options" value="docks"> DOCKS
-                </label>
-              </div>
+  <div id='map' style='width: 100vw; height: 100vh;'>
+    <div class="formContainer container">
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+          <label class="btn w-100 btn-info active">
+            <input onclick='toggle(event)' type="radio" name="options" value="bikes" checked> BIKES
+          </label>
+          <label class="btn w-100 btn-info ">
+            <input onclick='toggle(event)' type="radio" name="options" value="docks"> DOCKS
+          </label>
         </div>
     </div>
-    <script src="./index.js"></script>
+  </div>
+  <script src="./index.js"></script>
 </body>
 
 </html>
